<resources>
    <string name="app_name">SafeCircle</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="sosMessage">In case of emergency, keep telling family members to contact me</string>
    <string name="guard">Guard</string>
    <string name="guardMessage">Open when you are on a potentially dangerous journey</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="myFamily">My Family</string>
    <string name="safeCircle">Safe Circle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>